--- a/wild_visual_navigation_spot/config/wild_visual_navigation/spot.yaml
+++ b/wild_visual_navigation_spot/config/wild_visual_navigation/spot.yaml
@@ -3,7 +3,7 @@ robot_state_topic: "/wild_visual_navigation_node/robot_state"
 desired_twist_topic: "/wild_visual_navigation_node/reference_twist"
 
 # Relevant frames
-fixed_frame: odom
+fixed_frame: vision
 base_frame: base_link
 footprint_frame: base_link
 
